testsuite/tests/parser/should_fail/ParserNoBinaryLiterals3.stderr

ParserNoBinaryLiterals3.hs:9:4: error: [GHC-27346]
    • The data constructor ‘I#’ should have 1 argument, but has been given 2
    • In the pattern: I# 0 b0#
      In an equation for ‘f’: f (I# 0 b0#) = ()
